overflow-x added to HTML to fix horizontal scroll on android chrome

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     --cube-rotate-z: 0;
 }
 
-
+html { overflow-x: hidden; }
 body {
     /* background-color: #000; */
     min-height: 100vh;
@@ -38,6 +38,7 @@ body {
 
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     overflow-y: hidden;
 }
 
